# WorldCup2026

./: .gitignore  WorldCupDraftDash.py  pyproject.toml  requirements.txt
assets/: style.css
cache/2016/: data.txt  rules.html
cache/2018/: data.txt  rules.html
cache/2020/: data.txt  rules.html
cache/2022/: data.txt  rules.html
cache/2024/: data.txt  rules.html
cache/2026/: data.txt  rules.html
